--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@tanstack/react-query": "^5.8.4",
     "next": "14.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.1",
+    "twin.macro": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/styled-components": "^5.1.30",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "autoprefixer": "^10.0.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.0.3",
@@ -43,5 +47,10 @@
       "prettier --write",
       "eslint --fix"
     ]
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
