--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
   },
   "plugins": ["react", "@typescript-eslint", "eslint-plugin-prettier"],
   "rules": {
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": ["arrow-function", "function-declaration"] }
+    ],
     "prettier/prettier": ["error"],
     "no-console": "error",
     "@typescript-eslint/explicit-function-return-type": "off",
