--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.8.4",
+    "@types/styled-components": "^5.1.30",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-styled-components": "^2.1.4",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,10 +24,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/styled-components": "^5.1.30",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "autoprefixer": "^10.0.1",
-    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.0.3",
