--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.7",
     "babel-loader": "^9.1.3",
     "babel-plugin-styled-components": "^2.1.4",
+    "dayjs": "^1.11.10",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
