--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
     "styled-components": "^6.1.1",
+    "toastify": "^2.0.1",
     "twin.macro": "^3.4.0",
     "zustand": "^4.5.0"
   },
