--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.1",
     "toastify": "^2.0.1",
     "twin.macro": "^3.4.0",
